# navier-stokes

./: .gitignore  ABOUT.md  CMakeLists.txt  Makefile  Makefile2  README  archivate.sh  csv2mkd.py  gas  generate_pngs.py  libs  report.css  report.md
doc/pdesolver/: about.tex
grapher/: .gitignore  osx_open.sh
include/pdesolver/: calculation.h  construction.h  export.h  fill_system.h  functions.h  initialize.h  iterative_method.h  ndiagonal_matrix.h  print.h  sparse_matrix.h  start_conditions.h  structures.h
laspack-1.12.2/: CMakeLists.txt
laspack-1.12.2/laspack/: CMakeLists.txt  matrix.h
laspack-1.12.2/xc/: CMakeLists.txt  makefile
lib/laspack/: errhandl.c
pdesolver/: README
pdesolver/doc/: .gitignore
pdesolver/include/: calculation.h  construction.h  export.h  fill_system.h  functions.h  initialize.h  norm.h  print.h  relax_system.h  sparse_matrix.h  structures.h
pdesolver/src/: CMakeLists.txt  calculation.c  export.c  fill_system_non_smooth.c  fill_system_smooth.c  initialize.c  iterative_method.c  norm.c  pdesolver_non_smooth.c  print.c  relax_system.c  start_conditions_4.c
src/: CMakeLists.txt  calculation.c  calculation.h  construction.c  construction.h  export.c  export.h  fill_system_non_smooth.c  fill_system_smooth.c  functions.c  functions.h  initialize.c  initialize.h  iterative_method.c  iterative_method.h  main.c  ndiagonal_matrix.c  ndiagonal_matrix.h  norm.c  norm.h  pdesolver_non_smooth.c  pdesolver_smooth.c  print.c  print.h  sparse_matrix.c  sparse_matrix.h  start_conditions_3.c  start_conditions_4.c  structures.h
src/graphics/: .gitignore  plot_data.py
src/laspack/: CMakeLists.txt  itersolv.c  operats.c  precond.c
src/pdesolver/: CMakeLists.txt  calculation.c  construction.c  export.c  fill_system_non_smooth.c  fill_system_smooth.c  functions.c  initialize.c  iterative_method.c  main.c  norm.c  pdesolver.c  pdesolver_non_smooth.c  pdesolver_smooth.c  print.c  sparse_matrix.c  start_conditions_12.c  start_conditions_3.c  start_conditions_4.c
tests/: test_sparse_matrix.c
